[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/LevelCompleted/LevelCompleted.gd" type="Script" id=1]
[ext_resource path="res://Assets/graphics/kenney2/gui/panel.png" type="Texture" id=2]
[ext_resource path="res://Assets/fonts/Kenney Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Objects/Score/Score.tscn" type="PackedScene" id=4]
[ext_resource path="res://Objects/GUI/Button1/Button.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=2]
resource_name = "show"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("NinePatchRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("NinePatchRect/LevelCleared:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.8, 1, 1.2 ),
"transitions": PoolRealArray( 4.43828, 4.43828, 1 ),
"update": 0,
"values": [ Vector2( 1, 0 ), Vector2( 1, 0 ), Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("NinePatchRect/LevelCleared:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.6, 0.9, 1.2 ),
"transitions": PoolRealArray( 0.5, 0.5, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("NinePatchRect/Score:rect_scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.8, 1.3, 1.5 ),
"transitions": PoolRealArray( 2, 2, 1 ),
"update": 0,
"values": [ Vector2( 1, 0 ), Vector2( 1, 0 ), Vector2( 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("NinePatchRect/Score:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.6, 1.2, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("NinePatchRect/ScoreWrapper:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1.6, 1.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/7/type = "method"
tracks/7/path = NodePath("NinePatchRect/ScoreWrapper/Score")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 1.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "appear_animation"
} ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("NinePatchRect/VBoxContainer/Retry:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 1.6, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("NinePatchRect/VBoxContainer/Menu:modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 1.8, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="LevelCompleted" type="Control"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.396078 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -211.0
margin_right = 160.0
margin_bottom = 212.0
texture = ExtResource( 2 )
patch_margin_left = 19
patch_margin_top = 17
patch_margin_right = 18
patch_margin_bottom = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelCleared" type="Label" parent="NinePatchRect"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -103.0
margin_top = 60.0
margin_right = 101.0
margin_bottom = 84.0
rect_scale = Vector2( 1, 1e-05 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "GAME OVER!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="NinePatchRect"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -99.5
margin_right = 40.0
margin_bottom = -75.5
rect_scale = Vector2( 1, 1e-05 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "SCORE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreWrapper" type="Control" parent="NinePatchRect"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_top = -35.5
margin_bottom = -35.5

[node name="Score" parent="NinePatchRect/ScoreWrapper" instance=ExtResource( 4 )]
position = Vector2( 8, 0 )
score_value = 0

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -115.0
margin_top = 40.0
margin_right = 115.0
margin_bottom = 176.0
custom_constants/separation = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Retry" parent="NinePatchRect/VBoxContainer" instance=ExtResource( 6 )]
modulate = Color( 1, 1, 1, 0 )
margin_right = 230.0
margin_bottom = 60.0
rect_min_size = Vector2( 190, 60 )
disabled = true
__meta__ = {
"_edit_use_anchors_": false
}
text = "RETRY"

[node name="Menu" parent="NinePatchRect/VBoxContainer" instance=ExtResource( 6 )]
modulate = Color( 1, 1, 1, 0 )
margin_top = 76.0
margin_right = 230.0
margin_bottom = 136.0
rect_min_size = Vector2( 230, 60 )
disabled = true
__meta__ = {
"_edit_use_anchors_": false
}
text = "MENU"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/show = SubResource( 2 )

[connection signal="pressed" from="NinePatchRect/VBoxContainer/Retry" to="." method="_on_Retry_pressed"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/Menu" to="." method="_on_Menu_pressed"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/Menu" to="." method="_on_LevelSelection_pressed"]
